# Polimorphizm-in-C

./: CMakeLists.txt  Check.c  Check.h  FieldInfo.c  FieldInfo.h  FieldInfoFuncs.c  FieldInfoFuncs.h  MatrixOperations.c  MatrixOperations.h  MatrixService.c  MatrixService.h  README.md  TestCore.c  TestCore.h  VectorService.c  VectorService.h  main.c  messages.c  messages.h
